--- a/AKHONA/style.css
+++ b/AKHONA/style.css
@@ -1,58 +1,89 @@
 *{
- margin: 0;
-padding: 0;
-font-family: sans-serif;
-
+    margin: 0;
+    padding: 0;
 }
-h1{
-    padding-left: 39px;
-    position: relative;top: 200px;
-}
-.hero{ 
 
-
-    width:100%;
-    height: 100vh;
-    background: aquamarine;
-
-}
-nav{
+.navbar{
+    width: 86%;
     display: flex;
-    width: 84%;
     margin: auto;
-    padding: 20px 0px;
-    align-items: center;
-    justify-content: space-between;
+    padding: 15px 0;
+    align-content: space-between;
+}
 
+ul{
+    margin-top: -4%;
 }
-nav ul li{display: inline-block;
-list-style: none;
-margin: 10px 20px;
+
+ul li{
+    list-style: none;
+    display:inline-block;
+    padding: 10px 16px;
 }
-nav ul li a{
-    text-decoration: none;
-    color: #000;
+
+ul li a{
+    font-size: 16px;
     font-weight: bold;
+    text-decoration: none;
+    color:white;
+    margin-top: -3%;
+    transition: .4s ease;
 
+}
 
+ul li a:hover{
+    color:rgb(230,104,59);
 }
-nav ul li a:hover{
-    color:red;
+
+.info{
+    margin-left: 7%;
+    margin-top: 6%;
 }
-p{
-    font-size: 25px;
-    padding-left: 50px;
-    position: relative;top: 200px;
+
+.info h1{
+    font-size: 65px;
+    color:rgb(36,32,30);
 }
-button{
-    width: 200px;
-    height: 50px;
-    background-color:;
-    position: relative; top: -240px; left: 50px;
+
+.info h3{
+    font-size: 18px;
+    letter-spacing: 1px;
+    line-height: 24px;
+}
+.info span{
+    color: rgb(230,104,59);
+}
+.info a{
+    text-decoration: none;
+    color:#fff;
+    background: rgb(36,32,30);
+    margin: 26px 0;
+    padding:10px 18px;
     border-radius: 10px;
-    
+    display:inline-block;
+    transition: 4s ease;
 }
-img{
-    
-    
+
+.info a :hover{
+    background: rgb(59,174,209);
+}
+.image{
+    width: 30%;
+    height: 60%;
+    position: absolute;
+    right: 100px;
+    bottom: 0;
+}
+
+.image img {
+    position: absolute;
+    height: 140%;
+    left: 40%;
+    transform: translate(-55%);
+    bottom: 0;
+    transition: left 2s ease;
+}
+
+.image:hover .girl{
+    left: 55%;
 }
